garde/tests/ui/compile-fail/length_bad_min.stderr
error: `min` must be lower than or equal to `max`
 --> tests/ui/compile-fail/length_bad_min.rs
  |
  |     #[garde(length(min = 100, max = 10))]
  |                    ^^^
